# thesis-project

./: Cargo.toml  TODO_LIST.txt
src/: dummy_file.rs  lib.rs  main.rs
src/antipatterns/: circuit_treasure_hunt.rs  detect_blob.rs  detect_cth.rs  detect_god_class.rs  detect_wcs.rs  mod.rs
src/benchmark_stuff (to be removed)/: benchmark_manager.rs
src/profiler_manager/: mod.rs
src/profiler_manager/profiler_reader/: hotspot_manager.rs  memory_access_reader.rs  mod.rs
src/profiler_reader/summary/: hotspot_reader.rs  mod.rs
src/project_analyzer/: benchmark_manager.rs  class_manager.rs  data_checker.rs  data_manager.rs  functions_finder.rs  mod.rs  responsibilities_counter.rs
