[package]
name = "thesis_project"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.5"
syn = { version = "2.0", features = ["full", "extra-traits"] }
walkdir = "2.4"
quick-xml = { version = "0.31", features = ["serialize"] }
libloading = "0.8"
criterion = "0.5"
regex = "1"
clap = { version = "4.0", features = ["derive"] }
inquire = "0.4"
sysinfo = "0.30"
scraper = "0.12"
select = "0.5"  # Una libreria per il parsing e la selezione di elementi in HTML

[lib]
name = "thesis_project"
path = "src/lib.rs"

